--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 azure-functions==1.17.0
 openai>=1.30.0
 python-dotenv>=1.0.1
-yfinance>=0.2.48
+yfinance==0.2.48
 pandas>=2.3.1
-numpy>=2.2.6
+numpy==2.1.3
 requests>=2.32.0
 beautifulsoup4>=4.12.3
 praw>=7.7.1
 nltk>=3.9
+peewee>=3.16.2
+lxml>=4.9.1
+html5lib>=1.1
+platformdirs>=2.0.0
+pytz>=2022.5
+frozendict>=2.3.4
+multitasking>=0.0.7
