--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ azure-functions==1.17.0
 openai>=1.30.0
 python-dotenv>=1.0.1
 yfinance==0.2.48
-pandas>=2.3.1
+pandas>=2.2.2,<2.4.0
 numpy==2.1.3
 requests>=2.32.0
 beautifulsoup4>=4.12.3
