--- a/.github/workflows/deploy-azure-func.yaml
+++ b/.github/workflows/deploy-azure-func.yaml
@@ -20,8 +20,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          cache: none
+          python-version: "3.12"
+          cache: pip
+          cache-dependency-path: requirements.txt
       - name: Validate requirements.txt
         working-directory: ${{ env.FUNCTIONAPP_DIR }}
         shell: bash
@@ -31,7 +32,7 @@ jobs:
             echo "ERROR: requirements.txt not found" >&2
             exit 1
           fi
-          grep -q "yfinance" requirements.txt || { echo "ERROR: yfinance missing in requirements.txt" >&2; exit 1; }
+          grep -q "yfinance.*==.*0\.2\.48" requirements.txt || { echo "ERROR: yfinance==0.2.48 missing in requirements.txt" >&2; exit 1; }
       - name: Install runtime deps
         working-directory: ${{ env.FUNCTIONAPP_DIR }}
         run: |
@@ -67,7 +68,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-          cache: none
+          cache: pip
+          cache-dependency-path: requirements.txt
       - name: Validate requirements.txt
         working-directory: ${{ env.FUNCTIONAPP_DIR }}
         shell: bash
@@ -77,7 +79,7 @@ jobs:
             echo "ERROR: requirements.txt not found" >&2
             exit 1
           fi
-          grep -q "yfinance" requirements.txt || { echo "ERROR: yfinance missing in requirements.txt" >&2; exit 1; }
+          grep -q "yfinance.*==.*0\.2\.48" requirements.txt || { echo "ERROR: yfinance==0.2.48 missing in requirements.txt" >&2; exit 1; }
       - name: Prebuild dependencies into .python_packages
         working-directory: ${{ env.FUNCTIONAPP_DIR }}
         shell: bash
@@ -122,7 +124,7 @@ jobs:
           echo "Listing .python_packages contents..."
           ls -R .python_packages/lib/site-packages > packages.txt
           cat packages.txt
-          grep -q "yfinance" packages.txt || { echo "ERROR: yfinance not found in .python_packages" >&2; exit 1; }
+          grep -q "^yfinance$" packages.txt || { echo "ERROR: yfinance directory not found in .python_packages" >&2; exit 1; }
           echo "yfinance found in .python_packages ✅"
       - name: Create zip package
         working-directory: ${{ env.FUNCTIONAPP_DIR }}
@@ -135,7 +137,7 @@ jobs:
           echo "Verifying zip contents..."
           unzip -l release.zip > zip_contents.txt
           cat zip_contents.txt
-          grep -q ".python_packages/lib/site-packages/yfinance" zip_contents.txt || { echo "ERROR: yfinance not in release.zip" >&2; exit 1; }
+          grep -q ".python_packages/lib/site-packages/yfinance/" zip_contents.txt || { echo "ERROR: yfinance directory not in release.zip" >&2; exit 1; }
           echo "yfinance found in release.zip ✅"
       - name: Upload artifact for debugging
         uses: actions/upload-artifact@v4
