--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ requests>=2.32.0
 beautifulsoup4>=4.12.3
 praw>=7.7.1
 nltk>=3.9
-peewee>=3.16.2
+peewee==3.18.2
 lxml>=4.9.1
 html5lib>=1.1
 platformdirs>=2.0.0
